# projeto-lakehouse

./: .env  .env.template  .gitignore  README.md  compose.yaml  main.py  pyproject.toml
docker/airflow/: Dockerfile  compose.yaml  requirements.txt
docker/elasticsearch/: compose.yaml
docker/hive/: Dockerfile  compose.yaml  zworkspace.ipynb
docker/hive/conf/: metastore-site.xml
docker/minio/: compose.yaml
docker/minio/nginx/etc/: nginx.conf
docker/openmetadata/: compose.yaml
docker/opentelemetry/: compose.yaml
docker/opentelemetry/config/otelcol-contrib/: config.yml
docker/opentelemetry/config/prometheus/: prometheus.yml
docker/spark/: compose.2.spark.yaml  master.Dockerfile  requirements.txt  worker.Dockerfile
docker/trino/: compose.yaml
docker/trino/etc/trino/: config.properties  jvm.config  node.properties
docker/trino/etc/trino/catalog/: delta.properties  hive.properties
docker/trino/trino-coordinator/etc/trino/: config.properties  (+1 more)
docs/: README.md
docs/test/: ipca_amplo.json  zworkspace.ipynb  zwplib.py
src/dags/anp/serie_levantamento_precos/: anp_serie_levantamento_precos.py
src/dags/cno/cno/: cno_cno.py
src/dags/geography/coordinates/: geography_coordinates.py
src/dags/ibge/ipca_amplo/: ibge_ipca_amplo.py
src/dags/ibge/pme/: ibge_pme.py
src/dags/mdic/municipio_ncm/: src_lnd_mdic_municipio_ncm.py
src/dags/mdic/pais_ncm/: src_lnd_mdic_pais_ncm.py
src/dags/rfb/cno/: rfb_cno.py
src/dags/rfb/cnpj/: rfb_cnpj.py
src/dags/rfb/regime_tributario/: rfb_regime_tributario.py
src/dags/teste_pipeline/: test_data_dag.py
(+104 files in other folders)
